--- a/templates/index.html
+++ b/templates/index.html
@@ -1,32 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Raleway:ital,wght@0,400;1,300&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="main.js"></script>
-    <link href="/main.js" rel="javascript">
     <link href="/styles/styles.css" rel="stylesheet">
-    <script src="jquery-3.6.0.min.js"></script>
-    <!-- JavaScript Bundle with Popper -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>    <meta charset="UTF-8">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rs automobili</title>
 </head>
 <body>
     <!-- nav bar-->
-    <nav class="navbar navbar-expand-sm bg-light navbar-light">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="/img/logo.png" style="height: 2rem;"></a>
+          <a class="navbar-brand" href="#"><img src="/img/logo.png" style="height: 2.5rem;"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active" href="#">Home</a>
               </li>
@@ -37,6 +33,11 @@
                 <a class="nav-link" href="#">Contact me</a>
               </li>    
             </ul>
+            <ul class="navbar-nav sm-icons">
+              <li><a class="nav-link" href="#"><i class="bi bi-facebook"></i></a></li>
+              <li><a class="nav-link" href="#"><i class="bi bi-instagram"></i></a></li>
+              <li><a class="nav-link" href="#"><i class="bi bi-pinterest"></i></a></li>
+          </ul>
           </div>
         </div>
       </nav>
@@ -97,7 +98,7 @@
         <img src="/img/bg-carousel3.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block" style="color: white;">
           <h3 class="display-3 text-white">Poliranje</h3>
-          <p>Poliranje vaseg auta uz iskusne majstore</p>
+          <p>Poliranje vaseg auta uz najkvalitetniju opremu</p>
         </div>
       </div>
     </div>
@@ -117,7 +118,7 @@
     <!--jumbotron-->
 
 
-      <div class="p-4 shadow-4 rounded-3" style="background-color: hsl(0, 0%, 94%);">
+      <div class="p-4 shadow-4 rounded-3" style="background-color: hsl(0, 0%, 94%);" id="jumbotron">
         <h2>RS automobili</h2>
         <p>
            Vrsimo negu vaseg automobila
@@ -168,8 +169,6 @@
             </div>
         </div>
     </div>
-
-
     <!--
     <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
         <div class="card-header">Header</div>
@@ -207,6 +206,26 @@
 
 
     <!--fixed background-->
+
+
+    <!--footer-->
+
+  <footer class="bg-dark text-white pt-2 pb-2">
+    <div class="container text-center text-md-left">
+
+        <div class="row text-center text-md-left">
+
+          <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+            <h5 class="text-uppercase mb-4 font-weight-bold text-warning">Company name</h5>
+          </div>
+
+        </div>
+
+
+    </div>
+
+  </footer>
+
 
 
 
