--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <link href="/styles/styles.css" rel="stylesheet">
+    <link href="/static/styles/styles.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,7 +17,7 @@
     <!-- nav bar-->
     <nav class="navbar navbar-expand-sm fixed-top bg-dark navbar-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="/img/logo.png" style="height: 2.5rem;"></a>
+          <a class="navbar-brand" href="#"><img src="/static/img/logo.png" style="height: 2.5rem;"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -30,13 +30,13 @@
                 <a class="nav-link" href="#o-nama">About us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact me</a>
+                <a class="nav-link" href="#forma">Contact me</a>
               </li>    
             </ul>
             <div class="d-flex justify-content-sm-center">
                 <ul class="navbar-nav sm-icons justify-content-between">
                   <li><a class="nav-link" href="#"><i class="bi bi-facebook"></i></a></li>
-                  <li><a class="nav-link" href="#"><i class="bi bi-instagram"></i></a></li>
+                  <li><a class="nav-link" href="https://www.instagram.com/rs.automobili/" target="_blank"><i class="bi bi-instagram"></i></a></li>
                   <li><a class="nav-link" href="#"><i class="bi bi-pinterest"></i></a></li>
               </ul>
             </div>
@@ -73,8 +73,6 @@
         </button>
       </div>
 -->
-
-
 <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel" data-bs-touch="true">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -83,24 +81,23 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="10000">
-        <img src="/img/bg-carousel1.jpg" class="d-block w-100" alt="...">
+        <img src="/static/img/bg-carousel1.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-sm-block">
-          <h1 class="display-3 text-white">VOJISLAV RAJC</h1>
-          <button type="button" class="btn btn-outline-light btn-lg">Kontaktiraj me</button>
+          <button type="button" class="btn btn-outline-light btn-lg" onclick="location.href='#forma'">Kontaktiraj me</button>
         </div>
       </div>
       <div class="carousel-item" data-bs-interval="2000">
-        <img src="/img/bg-carousel2.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block" style="color: white;">
-          <h3 class="display-3 text-white">Dubinsko Usisavanje</h3>
-          <p>Vrsimo profesionalno dubinsko usisavanje</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="/img/bg-carousel3.jpg" class="d-block w-100" alt="...">
+        <img src="/static/slikeAuta/File_015.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block" style="color: white;">
           <h3 class="display-3 text-white">Poliranje</h3>
           <p>Poliranje vaseg auta uz najkvalitetniju opremu</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/static/img/background-carousel1.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block" style="color: white;">
+          <h3 class="display-3 text-white">Dubinsko Usisavanje</h3>
+          <p>Vrsimo profesionalno dubinsko usisavanje</p>
         </div>
       </div>
     </div>
@@ -120,7 +117,7 @@
     <!--jumbotron-->
 
 
-      <div class="p-4 shadow-4 rounded-3" style="background-color: hsl(0, 0%, 94%);" id="jumbotron">
+      <div class="p-4 shadow-4 rounded-3 text-left bg-dark text-white" id="jumbotron">
         <h2>RS automobili</h2>
         <p>
            Vrsimo negu vaseg automobila
@@ -131,20 +128,20 @@
         <p>
             Sva vrsta poliranja i dubinsko-hemijskih pranja
         </p>
-        <button type="button" class="btn btn-outline-dark">
+        <button type="button" class="btn btn-outline-info" onclick="location.href='#forma'">
           Zakazivanje putem mail-a
         </button>
       </div>
 
     <!--welcome section-->
 
-    <!--three column section-->
+    <!--three column section BRAND CARDS-->
 
     <div class="container-fluid">
         <div class="row g-5 pt-5 pb-5 justify-content-md-space-between">
             <div class="col-12 col-md-6 col-lg-4 px-3" id="brand-card">
                 <div class="card">
-                    <img src="/img/bosch-logo.png" class="card-img-top">
+                    <img src="/static/img/bosch-logo.png" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Bosch</h5>
                         <p class="card-text">Koristimo Bosch jednu od vodecih firmi na svetu u proizvodnji elektronike</p>
@@ -153,7 +150,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4 px-3" id="brand-card">
                 <div class="card">
-                    <img src="/img/karcher-logo.png" class="card-img-top">
+                    <img src="/static/img/karcher-logo.png" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Karcher</h5>
                         <p class="card-text">Koristimo karcher jednu od vodecih firmi na svetu u proizvodnji elektronike</p>
@@ -162,7 +159,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4 px-3" id="brand-card">
                 <div class="card">
-                    <img src="/img/alfa-romeo.png" class="card-img-top">
+                    <img src="/static/img/alfa-romeo.png" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Alfa romeo</h5>
                         <p class="card-text">Koristimo Alfu za prevoz u firmi iz razloga jer nemamo para</p>
@@ -212,14 +209,13 @@
           <h4 class="my-0 fw-normal">Povrsinsko ciscenje</h4>
         </div>
         <div class="card-body">
-          <h1 class="card-title pricing-card-title">700<small class="text-muted fw-light">/din</small></h1>
+          <h1 class="card-title pricing-card-title">1500<small class="text-muted fw-light">/din</small></h1>
           <ul class="list-unstyled mt-3 mb-4">
             <li>Pranje vozila spolja</li>
             <li>Usisavanje</li>
-            <li>Poliranje table</li>
-            <li>Pranje svih stakala</li>
+            <li>Osnovno pranje sarki i uvala</li>
           </ul>
-          <button type="button" class="w-100 btn btn-lg btn-outline-primary">Zakazi</button>
+          <button type="button" class="w-100 btn btn-lg btn-outline-info" onclick="location.href='#forma'">Zakazi</button>
         </div>
       </div>
     </div>
@@ -229,31 +225,29 @@
           <h4 class="my-0 fw-normal">Dubinsko pranje</h4>
         </div>
         <div class="card-body">
-          <h1 class="card-title pricing-card-title">1500<small class="text-muted fw-light">/din</small></h1>
+          <h1 class="card-title pricing-card-title">4000<small class="text-muted fw-light">/din</small></h1>
           <ul class="list-unstyled mt-3 mb-4">
-            <li>20 users included</li>
-            <li>10 GB of storage</li>
-            <li>Priority email support</li>
-            <li>Help center access</li>
+            <li>Dubinsko usisavanje celog automobila</li>
+            <li>Brisanje staklenih površina</li>
+            <li>Poliranje unutrasnjosti automobila</li>
           </ul>
-          <button type="button" class="w-100 btn btn-lg btn-outline-primary">Get started</button>
+          <button type="button" class="w-100 btn btn-lg btn-outline-info" onclick="location.href='#forma'">Zakazi</button>
         </div>
       </div>
     </div>
     <div class="col">
       <div class="card mb-4 rounded-3 shadow-sm">
-        <div class="card-header py-3 text-white bg-primary">
-          <h4 class="my-0 fw-normal">Enterprise</h4>
+        <div class="card-header py-3 text-white bg-secondary">
+          <h4 class="my-0 fw-normal">Light Poliranje</h4>
         </div>
         <div class="card-body">
-          <h1 class="card-title pricing-card-title">$29<small class="text-muted fw-light">/din</small></h1>
+          <h1 class="card-title pricing-card-title">8000<small class="text-muted fw-light">/din</small></h1>
           <ul class="list-unstyled mt-3 mb-4">
-            <li>30 users included</li>
-            <li>15 GB of storage</li>
-            <li>Phone and email support</li>
-            <li>Help center access</li>
+            <li>Uklanjanje blagih do srednjih ogrebotina</li>
+            <li>Detaljno pranje felni bez demontaže</li>
+            <li>Detaljno pranje šarki i uvala</li>
           </ul>
-          <button type="button" class="w-100 btn btn-lg btn-outline-primary">Contact us</button>
+          <button type="button" class="w-100 btn btn-lg btn-outline-info" onclick="location.href='#forma'">Zakazi</button>
         </div>
       </div>
     </div>
@@ -264,47 +258,52 @@
 
 
     <!--Profesionalno poliranje-->
-    <div class="container col-xxl-8 px-4 py-5">
-      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+    <div class="container col-xxl-8 px-4">
+      <div class="row flex-lg-row-reverse align-items-center g-5">
         <div class="col-10 col-sm-8 col-lg-6">
-          <img src="/img/cleaning-car2.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+          <img src="/static/slikeAuta/File_018.jpeg" class="d-block mx-lg-auto img-fluid rounded-1" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
         </div>
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold lh-1 mb-3">Profesionalno poliranje</h1>
-          <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
-          <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-            <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Primary</button>
-            <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
-          </div>
+          <p class="lead">Light” je jednoslojno mašinsko poliranje automobila radi se pastom srednje granulacije koja ujedno 
+            uklanja sitne ogrebotine i vraća sjaj. Ovaj stepen poliranja daje dobre rezultate, ali se na osnovu njega 
+            ne postiže perfekcija već korekcija laka do 70% na mekšim i do 50% na tvrđim lakovima. Efekat koji se postiže “light ” 
+            poliranjem jeste uklanjanje blagih do srednjih ogrebotina i vraćanje sjaja.</p>
         </div>
       </div>
     </div>
 
 
+    <!--Forma-->
+
+    <div class="container col-xl-10 col-xxl-8 px-4 py-5" id="forma">
+      <div class="row align-items-center g-lg-5 ">
+        <div class="col-lg-7 text-center text-lg-start">
+          <h1 class="display-4 fw-bold lh-1 mb-3">Zakazite termin putem mail-a</h1>
+        </div>
+        <div class="col-md-10 mx-auto col-lg-5">
+          <form class="p-4 p-md-5 border rounded-3 bg-light" action="/send" method="POST">
+            <div class="form-floating mb-3">
+              <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+              <label for="floatingInput">Email adresa</label>
+            </div>
+            <div class="form-floating mb-3">
+              <textarea class="form-control" id="message" style="height: 100px"></textarea>
+              <label for="message">Opis paketa i datum izabranog paketa</label>
+            </div>
+            <div class="checkbox mb-3">
+            </div>
+            <button class="w-100 btn btn-lg btn-primary" type="submit">Posalji</button>
+            <hr class="my-4">
+            <small class="text-muted">Preporucujemo zakazivanje pozivom.</small>
+            <button type="button" class="btn btn-outline-dark btn-sm" onclick="window.open('tel:900300400');">Pozovi</button>
+          </form>
+        </div>
+      </div>
+    </div>
 
 
     <!--About us-->
-
-    <div class="bg-dark text-secondary px-4 py-5 text-center">
-      <div class="py-5">
-        <h1 class="display-5 fw-bold text-white" id="o-nama">O nama</h1>
-        <div class="col-lg-6 mx-auto">
-          <p class="fs-5 mb-4">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-            incididunt ut labore et dolore magna aliqua. Eget nunc scelerisque viverra mauris. 
-            Nibh venenatis cras sed felis eget velit aliquet sagittis id. Libero nunc consequat 
-            interdum varius sit amet mattis. Enim diam vulputate ut pharetra sit amet. 
-            Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. 
-          </p>
-          <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <button type="button" class="btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold">Custom button</button>
-            <button type="button" class="btn btn-outline-light btn-lg px-4">Secondary</button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
     <!--footer-->
 
   <footer class="bg-dark text-white pt-2 pb-2">
@@ -313,7 +312,8 @@
         <div class="row text-center text-md-left">
 
           <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-            <h5 class="text-uppercase mb-4 font-weight-bold text-white">Company name</h5>
+            <h5 class="text-uppercase mb-4 font-weight-bold text-white">Dizajn i razvoj</h5>
+            <p class="fs-7">Nenad Djurdjevic</p>
           </div>
 
         </div>
@@ -322,11 +322,6 @@
     </div>
 
   </footer>
-
-
-
-
-
 
 </body>
 </html>
