--- a/templates/index.html
+++ b/templates/index.html
@@ -282,9 +282,11 @@
           <h1 class="display-4 fw-bold lh-1 mb-3">Zakazite termin putem mail-a</h1>
         </div>
         <div class="col-md-10 mx-auto col-lg-5">
+
+
           <form class="p-4 p-md-5 border rounded-3 bg-light" action="/send" method="POST">
             <div class="form-floating mb-3">
-              <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+              <input type="email" class="form-control" id="floatingInput" name="email" placeholder="name@example.com">
               <label for="floatingInput">Email adresa</label>
             </div>
             <div class="form-floating mb-3">
@@ -298,6 +300,8 @@
             <small class="text-muted">Preporucujemo zakazivanje pozivom.</small>
             <button type="button" class="btn btn-outline-dark btn-sm" onclick="window.open('tel:900300400');">Pozovi</button>
           </form>
+
+           
         </div>
       </div>
     </div>
