--- a/templates/success.html
+++ b/templates/success.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -283,13 +282,20 @@
           <h1 class="display-4 fw-bold lh-1 mb-3">Zakazite termin putem mail-a</h1>
         </div>
         <div class="col-md-10 mx-auto col-lg-5">
+
+
           <form class="p-4 p-md-5 border rounded-3 bg-light" action="/send" method="POST">
+            {% if True %}
+              <div class="alert alert-success" role="alert">
+                Uspesno ste poslali Mail!
+              </div>
+            {% endif %}
             <div class="form-floating mb-3">
-              <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+              <input type="email" class="form-control" id="floatingInput" name="email" placeholder="name@example.com">
               <label for="floatingInput">Email adresa</label>
             </div>
             <div class="form-floating mb-3">
-              <textarea class="form-control" id="message" style="height: 100px"></textarea>
+              <textarea class="form-control" id="message" name="message" style="height: 100px"></textarea>
               <label for="message">Opis paketa i datum izabranog paketa</label>
             </div>
             <div class="checkbox mb-3">
@@ -299,6 +305,8 @@
             <small class="text-muted">Preporucujemo zakazivanje pozivom.</small>
             <button type="button" class="btn btn-outline-dark btn-sm" onclick="window.open('tel:900300400');">Pozovi</button>
           </form>
+
+           
         </div>
       </div>
     </div>
@@ -324,12 +332,5 @@
 
   </footer>
 
-
-
-
-
-<script>
-  alert("Uspesno ste poslali mail, odgovoricemo vam u najkracem roku! Hvala");
-</script>
 </body>
 </html>
