--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <!-- nav bar-->
-    <nav class="navbar navbar-expand-sm fixed-top bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-sm fixed-top bg-dark navbar-dark my-0">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"><img src="/static/img/logo.png" style="height: 2.5rem;"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
@@ -137,7 +137,7 @@
     <!--welcome section-->
 
     <!--three column section BRAND CARDS-->
-
+<!--
     <div class="container-fluid">
         <div class="row g-5 pt-5 pb-5 justify-content-md-space-between">
             <div class="col-12 col-md-6 col-lg-4 px-3" id="brand-card">
@@ -169,6 +169,7 @@
             </div>
         </div>
     </div>
+    -->
     <!--
     <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
         <div class="card-header">Header</div>
@@ -203,11 +204,11 @@
   <!--Price-->
 
 
-  <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+  <div class="row pt-4 row-cols-1 row-cols-md-3 mb-3 text-center me-0 ms-1">
     <div class="col">
-      <div class="card mb-4 rounded-3 shadow-sm">
+      <div class="card mb-4 rounded-3 shadow-sm mx-0">
         <div class="card-header py-3">
-          <h4 class="my-0 fw-normal">Povrsinsko ciscenje</h4>
+          <h4 class="fw-normal">Povrsinsko ciscenje</h4>
         </div>
         <div class="card-body">
           <h1 class="card-title pricing-card-title">1500<small class="text-muted fw-light">/din</small></h1>
@@ -221,7 +222,7 @@
       </div>
     </div>
     <div class="col">
-      <div class="card mb-4 rounded-3 shadow-sm">
+      <div class="card mb-4 rounded-3 shadow-sm mx-0">
         <div class="card-header py-3">
           <h4 class="my-0 fw-normal">Dubinsko pranje</h4>
         </div>
@@ -237,7 +238,7 @@
       </div>
     </div>
     <div class="col">
-      <div class="card mb-4 rounded-3 shadow-sm">
+      <div class="card mb-4 rounded-3 shadow-sm mx-0" id="third-card">
         <div class="card-header py-3 text-white bg-secondary">
           <h4 class="my-0 fw-normal">Light Poliranje</h4>
         </div>
@@ -296,7 +297,7 @@
             </div>
             <div class="checkbox mb-3">
             </div>
-            <button class="w-100 btn btn-lg btn-primary" type="submit" onclick="success();">Posalji</button>
+            <button class="w-100 btn btn-lg btn-outline-info" id="btn" type="submit">Posalji</button>
             <hr class="my-4">
             <small class="text-muted">Preporucujemo zakazivanje pozivom.</small>
             <button type="button" class="btn btn-outline-dark btn-sm" onclick="window.open('tel:900300400');">Pozovi</button>
@@ -310,7 +311,6 @@
 
     <!--About us-->
     <!--footer-->
-
   <footer class="bg-dark text-white pt-2 pb-2">
     <div class="container text-center text-md-left">
 
@@ -325,7 +325,6 @@
 
 
     </div>
-
   </footer>
 
 </body>
